--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ plugins {
 }
 */
 
+repositories {
+    maven {
+        url "http://dvs1.progwml6.com/files/maven"
+    }
+}
+
 ext.buildProps = file "gradle.properties"
 
 buildProps.withReader {
@@ -32,9 +38,12 @@ version = "${config.version.mod}"
 group= "info.aenterprise.chunkloaderz" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ChunkLoaderZ-${config.version.mc}"
 
+
+
 minecraft {
-    version = "1.8.9-11.15.0.1688"
+    version = "1.8.9-11.15.0.1699"
     runDir = "run"
+    useDepAts = true
     replace "@MODVERSION@", config.version.mod
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -47,27 +56,7 @@ minecraft {
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    deobfCompile "mezz.jei:jei_1.8.9:2.18.1.88"
 }
 
 processResources
@@ -89,12 +78,3 @@ processResources
         exclude 'mcmod.info'
     }
 }
-
-task deobfJar(type: Jar) {
-    from sourceSets.main.output
-    classifier = 'dev'
-}
-
-assemble.dependsOn deobfJar
-
-idea { module.outputDir = sourceSets.main.output.classesDir }
