--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
-version.mod=1.0.3
-version.mc=1.8.9
+version.mod=1.1
+version.mc=1.9
+version.forge=12.16.0.1832
+version.jei=3.2.5.178
+version.mappings=snapshot_20160312
