--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version.mod=1.1
-version.mc=1.9
-version.forge=12.16.0.1832
-version.jei=3.2.5.178
-version.mappings=snapshot_20160312
+version.mod=1.2
+version.mc=1.9.4
+version.forge=12.17.0.1976
+version.jei=3.6.7.216
+version.mappings=stable_26
