--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -41,7 +41,7 @@ archivesBaseName = "ChunkLoaderZ-${config.version.mc}"
 
 
 minecraft {
-    version = "${config.version.mc}-${config.version.forge}-${config.version.mc}"
+    version = "${config.version.mc}-${config.version.forge}"
     runDir = "run"
     useDepAts = true
     replace "@MODVERSION@", config.version.mod
