--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version.mod=1.2
-version.mc=1.9.4
-version.forge=12.17.0.1976
-version.jei=3.6.7.216
-version.mappings=stable_26
+version.mc=1.11
+version.forge=13.19.1.2195
+version.jei=4.1.1.207
+version.mappings=snapshot_20161220
